--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "base-x": "1.0.4"
   },
   "contributors": [
-    "David Dias <daviddias.p@gmail.com>"
+    "David Dias <daviddias.p@gmail.com>",
+    "theobat <theophile.batoz@gmail.com>"
   ]
 }
