--- a/package.json
+++ b/package.json
@@ -44,9 +44,10 @@
   },
   "homepage": "https://github.com/multiformats/js-multibase#readme",
   "dependencies": {
-    "bs58": "^3.0.0"
+    "base-x": "1.0.4"
   },
   "contributors": [
-    "David Dias <daviddias.p@gmail.com>"
+    "David Dias <daviddias.p@gmail.com>",
+    "theobat <theophile.batoz@gmail.com>"
   ]
 }
