--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "test:browser": "aegir-test browser",
     "build": "aegir-build",
     "test": "aegir-test",
-    "release": "aegir-release",
-    "release-minor": "aegir-release --type minor",
-    "release-major": "aegir-release --type major",
+    "docs": "aegir-docs",
+    "release": "aegir-release --docs",
+    "release-minor": "aegir-release --type minor --docs",
+    "release-major": "aegir-release --type major --docs",
     "coverage": "aegir-coverage",
     "coverage-publish": "aegir-coverage publish"
   },
@@ -32,9 +33,9 @@
     "formats"
   ],
   "devDependencies": {
-    "aegir": "^9.1.2",
+    "aegir": "^9.2.2",
     "chai": "^3.5.0",
-    "pre-commit": "^1.1.3"
+    "pre-commit": "^1.2.1"
   },
   "author": "David Dias <daviddias@ipfs.io>",
   "license": "MIT",
@@ -43,7 +44,7 @@
   },
   "homepage": "https://github.com/multiformats/js-multibase#readme",
   "dependencies": {
-    "base-x": "1.0.4"
+    "base-x": "1.1.0"
   },
   "contributors": [
     "David Dias <daviddias.p@gmail.com>",
