--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "multibase",
   "version": "0.2.0",
   "description": "JavaScript implementation of the multibase specification",
-  "main": "lib/index.js",
-  "jsnext:main": "src/index.js",
+  "main": "src/index.js",
   "scripts": {
     "test:node": "aegir-test node",
     "lint": "aegir-lint",
     "test:browser": "aegir-test browser",
     "build": "aegir-build",
     "test": "aegir-test",
-    "release": "aegir-release",
-    "release-minor": "aegir-release --type minor",
-    "release-major": "aegir-release --type major",
+    "docs": "aegir-docs",
+    "release": "aegir-release --docs",
+    "release-minor": "aegir-release --type minor --docs",
+    "release-major": "aegir-release --type major --docs",
     "coverage": "aegir-coverage",
     "coverage-publish": "aegir-coverage publish"
   },
@@ -33,9 +33,9 @@
     "formats"
   ],
   "devDependencies": {
-    "aegir": "^6.0.1",
+    "aegir": "^9.3.0",
     "chai": "^3.5.0",
-    "pre-commit": "^1.1.3"
+    "pre-commit": "^1.2.2"
   },
   "author": "David Dias <daviddias@ipfs.io>",
   "license": "MIT",
@@ -44,7 +44,7 @@
   },
   "homepage": "https://github.com/multiformats/js-multibase#readme",
   "dependencies": {
-    "base-x": "1.0.4"
+    "base-x": "1.1.0"
   },
   "contributors": [
     "David Dias <daviddias.p@gmail.com>",
