test: use dirty-chai

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "aegir": "^11.0.0",
     "chai": "^3.5.0",
+    "dirty-chai": "^1.2.2",
     "pre-commit": "^1.2.2"
   },
   "author": "David Dias <daviddias@ipfs.io>",
