--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,19 @@
+# Warning: This file is automatically synced from https://github.com/ipfs/ci-sync so if you want to change it, please change it there and ask someone to sync all repositories.
 sudo: false
 language: node_js
 
 matrix:
   include:
-  - node_js: 4
-    env: CXX=g++-4.8
   - node_js: 6
-    env:
-      - SAUCE=true
-      - CXX=g++-4.8
-  - node_js: stable
     env: CXX=g++-4.8
-
-before_install:
-  - npm install -g npm
+  - node_js: 8
+    env: CXX=g++-4.8
+    #  - node_js: stable
+    #    env: CXX=g++-4.8
 
 script:
   - npm run lint
-  - npm test
+  - npm run test
   - npm run coverage
 
 before_script:
@@ -28,7 +24,7 @@ after_success:
   - npm run coverage-publish
 
 addons:
-  firefox: latest
+  firefox: 'latest'
   apt:
     sources:
       - ubuntu-toolchain-r-test
