fix: base32 and base64 feat: base32hex, base32pad, base32hexpad, base64urlpad, base64pad

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,8 @@ build
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+yarn.lock
+package-lock.json
 
 dist
 docs
