--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "JavaScript implementation of the multibase specification",
   "main": "src/index.js",
   "scripts": {
-    "test:node": "aegir-test node",
-    "lint": "aegir-lint",
-    "test:browser": "aegir-test browser",
-    "build": "aegir-build",
-    "test": "aegir-test",
-    "docs": "aegir-docs",
-    "release": "aegir-release --docs",
-    "release-minor": "aegir-release --type minor --docs",
-    "release-major": "aegir-release --type major --docs",
-    "coverage": "aegir-coverage",
-    "coverage-publish": "aegir-coverage publish"
+    "lint": "aegir lint",
+    "test": "aegir test",
+    "test:node": "aegir test -t node",
+    "test:browser": "aegir test -t browser",
+    "build": "aegir build",
+    "docs": "aegir docs",
+    "release": "aegir release --docs",
+    "release-minor": "aegir release --type minor --docs",
+    "release-major": "aegir release --type major --docs",
+    "coverage": "aegir coverage",
+    "coverage-publish": "aegir coverage publish"
   },
   "pre-commit": [
     "lint",
@@ -33,10 +33,13 @@
     "formats"
   ],
   "devDependencies": {
-    "aegir": "^11.0.0",
-    "chai": "^3.5.0",
-    "dirty-chai": "^1.2.2",
+    "aegir": "^12.3.0",
+    "chai": "^4.1.2",
+    "dirty-chai": "^2.0.1",
     "pre-commit": "^1.2.2"
+  },
+  "dependencies": {
+    "base-x": "3.0.4"
   },
   "author": "David Dias <daviddias@ipfs.io>",
   "license": "MIT",
@@ -44,9 +47,6 @@
     "url": "https://github.com/multiformats/js-multibase/issues"
   },
   "homepage": "https://github.com/multiformats/js-multibase#readme",
-  "dependencies": {
-    "base-x": "3.0.0"
-  },
   "contributors": [
     "David Dias <daviddias.p@gmail.com>",
     "Friedel Ziegelmayer <dignifiedquire@gmail.com>",
