--- a/package.json
+++ b/package.json
@@ -50,9 +50,12 @@
   "contributors": [
     "David Dias <daviddias.p@gmail.com>",
     "Friedel Ziegelmayer <dignifiedquire@gmail.com>",
+    "Henrique Dias <hacdias@gmail.com>",
     "Richard Littauer <richard.littauer@gmail.com>",
+    "Wolfgang Faust <wolfgang42@users.noreply.github.com>",
     "greenkeeper[bot] <greenkeeper[bot]@users.noreply.github.com>",
     "npm-to-cdn-bot (by Forbes Lindesay) <npmcdn-to-unpkg-bot@users.noreply.github.com>",
-    "theobat <theophile.batoz@gmail.com>"
+    "theobat <theophile.batoz@gmail.com>",
+    "ᴠɪᴄᴛᴏʀ ʙᴊᴇʟᴋʜᴏʟᴍ <victorbjelkholm@gmail.com>"
   ]
 }
