--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "multibase",
   "version": "0.4.0",
   "description": "JavaScript implementation of the multibase specification",
-  "lead-maintainer": "Oli Evans <oli@tableflip.io>",
+  "leadMaintainer": "Oli Evans <oli@tableflip.io>",
   "main": "src/index.js",
   "scripts": {
     "lint": "aegir lint",
@@ -17,10 +17,6 @@
     "coverage": "aegir coverage",
     "coverage-publish": "aegir coverage publish"
   },
-  "pre-commit": [
-    "lint",
-    "test"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/multiformats/js-multibase.git"
