docs: add lead maintainer (#27)
* add lead maintainer

* rm old captain section

* Update package.json

* Update package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "multibase",
   "version": "0.4.0",
   "description": "JavaScript implementation of the multibase specification",
+  "leadMaintainer": "Oli Evans <oli@tableflip.io>",
   "main": "src/index.js",
   "scripts": {
     "lint": "aegir lint",
@@ -16,10 +17,6 @@
     "coverage": "aegir coverage",
     "coverage-publish": "aegir coverage publish"
   },
-  "pre-commit": [
-    "lint",
-    "test"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/multiformats/js-multibase.git"
@@ -33,7 +30,7 @@
     "formats"
   ],
   "devDependencies": {
-    "aegir": "^12.3.0",
+    "aegir": "^13.1.0",
     "chai": "^4.1.2",
     "dirty-chai": "^2.0.1",
     "pre-commit": "^1.2.2"
@@ -41,7 +38,6 @@
   "dependencies": {
     "base-x": "3.0.4"
   },
-  "author": "David Dias <daviddias@ipfs.io>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/multiformats/js-multibase/issues"
