--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
   },
   "homepage": "https://github.com/multiformats/js-multibase#readme",
   "contributors": [
+    "Alan Shaw <alan@tableflip.io>",
     "David Dias <daviddias.p@gmail.com>",
     "Friedel Ziegelmayer <dignifiedquire@gmail.com>",
     "Henrique Dias <hacdias@gmail.com>",
+    "Oli Evans <oli@tableflip.io>",
     "Richard Littauer <richard.littauer@gmail.com>",
     "Wolfgang Faust <wolfgang42@users.noreply.github.com>",
     "greenkeeper[bot] <greenkeeper[bot]@users.noreply.github.com>",
