--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "multibase",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "description": "JavaScript implementation of the multibase specification",
   "leadMaintainer": "Oli Evans <oli@tableflip.io>",
   "main": "src/index.js",
@@ -49,17 +49,15 @@
   },
   "homepage": "https://github.com/multiformats/js-multibase#readme",
   "contributors": [
-    "Alan Shaw <alan.shaw@protocol.ai>",
-    "Alan Shaw <alan@tableflip.io>",
     "David Dias <daviddias.p@gmail.com>",
-    "Friedel Ziegelmayer <dignifiedquire@gmail.com>",
-    "Henrique Dias <hacdias@gmail.com>",
     "Oli Evans <oli@tableflip.io>",
+    "Friedel Ziegelmayer <dignifiedquire@gmail.com>",
+    "Alan Shaw <alan.shaw@protocol.ai>",
+    "Hugo Dias <hugomrdias@gmail.com>",
+    "ᴠɪᴄᴛᴏʀ ʙᴊᴇʟᴋʜᴏʟᴍ <victorbjelkholm@gmail.com>",
     "Richard Littauer <richard.littauer@gmail.com>",
-    "Wolfgang Faust <wolfgang42@users.noreply.github.com>",
-    "greenkeeper[bot] <greenkeeper[bot]@users.noreply.github.com>",
-    "npm-to-cdn-bot (by Forbes Lindesay) <npmcdn-to-unpkg-bot@users.noreply.github.com>",
     "theobat <theophile.batoz@gmail.com>",
-    "victorbjelkholm <victorbjelkholm@gmail.com>"
+    "Henrique Dias <hacdias@gmail.com>",
+    "Bora M. Alper <boramalper@gmail.com>"
   ]
 }
