--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "formats"
   ],
   "devDependencies": {
-    "aegir": "^22.0.0",
+    "aegir": "ipfs/aegir#feat/typescript-support",
     "chai": "^4.1.2",
     "dirty-chai": "^2.0.1",
     "pre-commit": "^1.2.2"
@@ -42,6 +42,9 @@
   "dependencies": {
     "base-x": "^3.0.8",
     "buffer": "^5.5.0"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/aegir/src/config/eslintrc.js"
   },
   "license": "MIT",
   "bugs": {
