feat: more encoding, errors, spec tests
- adds support for all the encoding in https://github.com/multiformats/multibase/blob/master/multibase.csv
-  better errors showing the invalid chars and inputs
- `names` and `codes` export the full object that maps names/codes to base instances
- two news methods exported, `encoding` and `encodingFromData`
- added all the spec tests https://github.com/multiformats/multibase/tree/master/tests

This module now only uses 2 base encoding implementations, 1 generalised rfc4648 and 1 generalised btc like.

Note:
`base8` deviates from the spec tests outputs but aligns with https://github.com/multiformats/multibase/pull/60

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "aegir": "^22.0.0",
+    "benchmark": "^2.1.4",
     "chai": "^4.1.2",
     "dirty-chai": "^2.0.1",
     "pre-commit": "^1.2.2"
