--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "multibase",
-  "version": "0.7.0",
+  "version": "1.0.0",
   "description": "JavaScript implementation of the multibase specification",
   "keywords": [
     "IPFS",
@@ -53,15 +53,16 @@
   },
   "contributors": [
     "David Dias <daviddias.p@gmail.com>",
-    "Oli Evans <oli@tableflip.io>",
     "Hugo Dias <hugomrdias@gmail.com>",
+    "Oli Evans <oli@tableflip.io>",
     "Friedel Ziegelmayer <dignifiedquire@gmail.com>",
     "Alan Shaw <alan.shaw@protocol.ai>",
-    "victorbjelkholm <victorbjelkholm@gmail.com>",
+    "ᴠɪᴄᴛᴏʀ ʙᴊᴇʟᴋʜᴏʟᴍ <victorbjelkholm@gmail.com>",
+    "Carson Farmer <carson.farmer@gmail.com>",
+    "Bora M. Alper <boramalper@gmail.com>",
+    "Richard Littauer <richard.littauer@gmail.com>",
     "achingbrain <alex@achingbrain.net>",
     "theobat <theophile.batoz@gmail.com>",
-    "Bora M. Alper <boramalper@gmail.com>",
-    "Henrique Dias <hacdias@gmail.com>",
-    "Richard Littauer <richard.littauer@gmail.com>"
+    "Henrique Dias <hacdias@gmail.com>"
   ]
 }
