--- a/package.json
+++ b/package.json
@@ -39,10 +39,7 @@
   },
   "devDependencies": {
     "aegir": "^24.0.0",
-    "benchmark": "^2.1.4",
-    "chai": "^4.1.2",
-    "dirty-chai": "^2.0.1",
-    "pre-commit": "^1.2.2"
+    "benchmark": "^2.1.4"
   },
   "engines": {
     "node": ">=10.0.0",
