chore: electron fix2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,5 +55,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: apt install xvfb
       - run: yarn
       - run: yarn aegir test -t electron-renderer --bail
