--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: apt install xvfb
+      - run: sudo apt-get install xvfb
       - run: yarn
       - run: yarn aegir test -t electron-renderer --bail
