--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,4 +57,4 @@ jobs:
       - uses: actions/checkout@v2
       - run: sudo apt-get install xvfb
       - run: yarn
-      - run: yarn aegir test -t electron-renderer --bail
+      - run: npx xvfb-maybe yarn aegir test -t electron-renderer --bail
