--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "multibase",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "JavaScript implementation of the multibase specification",
   "keywords": [
     "IPFS",
@@ -56,11 +56,12 @@
     "Friedel Ziegelmayer <dignifiedquire@gmail.com>",
     "Alan Shaw <alan.shaw@protocol.ai>",
     "ᴠɪᴄᴛᴏʀ ʙᴊᴇʟᴋʜᴏʟᴍ <victorbjelkholm@gmail.com>",
-    "Carson Farmer <carson.farmer@gmail.com>",
     "Bora M. Alper <boramalper@gmail.com>",
+    "Irakli Gozalishvili <contact@gozala.io>",
     "Richard Littauer <richard.littauer@gmail.com>",
     "achingbrain <alex@achingbrain.net>",
     "theobat <theophile.batoz@gmail.com>",
-    "Henrique Dias <hacdias@gmail.com>"
+    "Henrique Dias <hacdias@gmail.com>",
+    "Carson Farmer <carson.farmer@gmail.com>"
   ]
 }
