--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "coverage-publish": "aegir coverage publish"
   },
   "dependencies": {
-    "base-x": "achingbrain/base-x#feature/return-uint8arrays",
+    "@multiformats/base-x": "^4.0.1",
     "web-encoding": "^1.0.2"
   },
   "devDependencies": {
-    "aegir": "^25.0.0",
+    "aegir": "^26.0.0",
     "benchmark": "^2.1.4"
   },
   "engines": {
