chore: update contributors

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "multibase",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "JavaScript implementation of the multibase specification",
   "keywords": [
     "IPFS",
@@ -54,8 +54,9 @@
     "Oli Evans <oli@tableflip.io>",
     "Friedel Ziegelmayer <dignifiedquire@gmail.com>",
     "Alan Shaw <alan.shaw@protocol.ai>",
-    "Irakli Gozalishvili <contact@gozala.io>",
     "Alex Potsides <alex@achingbrain.net>",
+    "Irakli Gozalishvili <contact@gozala.io>",
+    "Volker Mische <volker.mische@gmail.com>",
     "victorbjelkholm <victorbjelkholm@gmail.com>",
     "Bora M. Alper <boramalper@gmail.com>",
     "Carson Farmer <carson.farmer@gmail.com>",
