--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
     - uses: actions/checkout@v2
     - run: yarn
     - run: yarn lint
+    - run: yarn build
+    - run: yarn aegir ts -p check
     - run: yarn aegir dep-check -- -i aegir
     - uses: ipfs/aegir/actions/bundle-size@master
       name: size
