--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: bahmutov/npm-install@v1
+    - run: yarn
     - run: yarn lint
     - run: yarn build
     - run: yarn aegir ts -p check
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node }}
-      - uses: bahmutov/npm-install@v1
+      - run: yarn
       - run: npx nyc --reporter=lcov npm run test:node -- --bail
       - uses: codecov/codecov-action@v1
   test-chrome:
@@ -36,26 +36,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: bahmutov/npm-install@v1
+      - run: yarn
       - run: yarn aegir test -t browser -t webworker
   test-firefox:
     needs: check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: bahmutov/npm-install@v1
+      - run: yarn
       - run: yarn aegir test -t browser -t webworker -- --browsers FirefoxHeadless
   test-electron-main:
     needs: check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: bahmutov/npm-install@v1
+      - run: yarn
       - run: npx xvfb-maybe yarn aegir test -t electron-main --bail
   test-electron-renderer:
     needs: check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: bahmutov/npm-install@v1
+      - run: yarn
       - run: npx xvfb-maybe yarn aegir test -t electron-renderer --bail
