--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     - run: yarn
     - run: yarn lint
     - run: yarn aegir dep-check -- -i aegir
-    - uses: ipfs/aegir/actions/bundle-size@master
+    - uses: ipfs/aegir/actions/bundle-size@fix/bundle-action-pr-detection
       name: size
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
