--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "web-encoding": "^1.0.4"
   },
   "devDependencies": {
-    "aegir": "github:ipfs/aegir#fix/ts-docs-update",
+    "aegir": "^29.0.1",
     "benchmark": "^2.1.4"
   },
   "engines": {
@@ -50,7 +50,12 @@
   },
   "types": "dist/src/index.d.ts",
   "typesVersions": {
-    "*": { "src/*": ["dist/src/*", "dist/src/*/index"] }
+    "*": {
+      "src/*": [
+        "dist/src/*",
+        "dist/src/*/index"
+      ]
+    }
   },
   "contributors": [
     "David Dias <daviddias.p@gmail.com>",
