--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   "main": "src/index.js",
   "repository": "github:multiformats/js-multibase",
   "scripts": {
+    "prepare": "aegir build",
     "lint": "aegir lint",
     "test": "aegir test",
     "test:node": "aegir test -t node",
     "test:browser": "aegir test -t browser",
-    "build": "aegir build",
     "docs": "aegir docs",
     "release": "aegir release --docs",
     "release-minor": "aegir release --type minor --docs",
