--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "release-major": "aegir release --type major"
   },
   "dependencies": {
-    "@multiformats/base-x": "^4.0.1",
-    "web-encoding": "^1.1.0"
+    "@multiformats/base-x": "^4.0.1"
   },
   "devDependencies": {
     "aegir": "^31.0.0",
