--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "multibase",
-  "version": "4.0.4",
+  "version": "4.0.5",
   "description": "JavaScript implementation of the multibase specification",
   "keywords": [
     "IPFS",
@@ -49,17 +49,17 @@
     "Hugo Dias <hugomrdias@gmail.com>",
     "David Dias <daviddias.p@gmail.com>",
     "Oli Evans <oli@tableflip.io>",
-    "Friedel Ziegelmayer <dignifiedquire@gmail.com>",
     "Alex Potsides <alex@achingbrain.net>",
+    "Friedel Ziegelmayer <dignifiedquire@gmail.com>",
     "Volker Mische <volker.mische@gmail.com>",
     "Alan Shaw <alan.shaw@protocol.ai>",
     "Irakli Gozalishvili <contact@gozala.io>",
     "victorbjelkholm <victorbjelkholm@gmail.com>",
-    "theobat <theophile.batoz@gmail.com>",
     "Bora M. Alper <boramalper@gmail.com>",
     "Carson Farmer <carson.farmer@gmail.com>",
     "Henrique Dias <hacdias@gmail.com>",
     "Kyle Maas <kylemaasdev@gmail.com>",
-    "Richard Littauer <richard.littauer@gmail.com>"
+    "Richard Littauer <richard.littauer@gmail.com>",
+    "theobat <theophile.batoz@gmail.com>"
   ]
 }
