chore: update deps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
-    "extends": "./node_modules/aegir/src/config/tsconfig.aegir.json",
+    "extends": "aegir/src/config/tsconfig.aegir.json",
     "compilerOptions": {
-        "outDir": "dist"
+      "outDir": "dist"
     },
     "include": [
-      "src", "test"
+      "src",
+      "test"
     ]
 }
