--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "@multiformats/base-x": "^4.0.1"
   },
   "devDependencies": {
-    "aegir": "^31.0.0",
-    "benchmark": "^2.1.4"
+    "aegir": "^35.0.2",
+    "benchmark": "^2.1.4",
+    "util": "^0.12.4"
   },
   "engines": {
     "node": ">=12.0.0",
